RESOLVED FIXED113194
Swap both the error and change event queue before processing fullscreen events
https://bugs.webkit.org/show_bug.cgi?id=113194
Summary Swap both the error and change event queue before processing fullscreen events
jochen
Reported 2013-03-25 06:18:09 PDT
Swap both the error and change event queue before processing fullscreen events
Attachments
Patch (4.02 KB, patch)
2013-03-25 06:32 PDT, jochen
no flags
Patch (3.66 KB, patch)
2013-03-25 06:35 PDT, jochen
no flags
Archive of layout-test-results from gce-cr-linux-03 for chromium-linux-x86_64 (768.42 KB, application/zip)
2013-03-25 07:28 PDT, WebKit Review Bot
no flags
jochen
Comment 1 2013-03-25 06:32:17 PDT
jochen
Comment 2 2013-03-25 06:35:49 PDT
WebKit Review Bot
Comment 3 2013-03-25 07:28:56 PDT
Comment on attachment 194842 [details] Patch Attachment 194842 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17321034 New failing tests: fast/js/dfg-inline-resolve.html
WebKit Review Bot
Comment 4 2013-03-25 07:28:59 PDT
Created attachment 194850 [details] Archive of layout-test-results from gce-cr-linux-03 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-03 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
WebKit Review Bot
Comment 5 2013-03-25 10:59:49 PDT
Comment on attachment 194842 [details] Patch Clearing flags on attachment: 194842 Committed r146787: <http://trac.webkit.org/changeset/146787>
WebKit Review Bot
Comment 6 2013-03-25 10:59:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.