Swap both the error and change event queue before processing fullscreen events https://bugs.webkit.org/show_bug.cgi?id=113194

Reviewed by Jer Noble.

Source/WebCore:

While processing the change events, not only new change events but
also new error events might get generated. However, for the timer, we
should only process preexisting events.

This is covered by fullscreen/full-screen-restrictions.html which times
out depending on the delay between requesting fullscreen and granting
fullscreen.

* dom/Document.cpp:
(WebCore::Document::fullScreenChangeDelayTimerFired):

LayoutTests:

* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/131551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146787 268f45cc-cd09-0410-ab3c-d52691b4dbfc